- Minor fixes. - Overflow fixed

--- a/aboutPage/about.css
+++ b/aboutPage/about.css
@@ -8,24 +8,29 @@ html,
 body {
   height: 100vh;
   width: 100vw;
-  margin: 0px;
+  max-width: 100%;
+  margin: 0;
 }
 
 .container-img {
   height: 50vh;
+  max-width: 100%;
   width: 100vw;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   position: relative;
 }
 
 .container-img > img {
+  max-width: 100%;
   width: 100vw;
   height: 100%;
 }
 
 .center-aligned {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
@@ -33,6 +38,8 @@ body {
 .horizontal-bar-home {
   background-color: rgba(255, 255, 255, 0.7);
   color: black;
+  max-height: 7vh;
+  max-width: 100%;
 }
 
 .horizontal-bar-home-title {
@@ -40,15 +47,18 @@ body {
   color: white;
   padding-left: 3%;
   font-size: 20px;
+  max-width: 100%;
 }
 
 .horizontal-bar {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   position: absolute;
   left: 0%;
   top: 0%;
   width: 100%;
+  max-width: 100%;
 }
 
 .flex-container {
@@ -78,11 +88,13 @@ body {
 }
 nav {
   width: 100vw;
+  max-width: 100%;
 }
 
 nav ul {
   justify-content: center;
   width: 100vw;
+  max-width: 100%;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -95,6 +107,7 @@ ul {
 nav li {
   color: #fff;
   display: flex;
+  flex-wrap: wrap;
   padding-left: 2%;
   padding-right: 2%;
 }
@@ -132,6 +145,61 @@ a {
 .horizontal-bar-about > p > span {
   color: black;
 }
+
+.bottom-bar {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  background-color: black;
+  color: white;
+  justify-content: center;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+}
+
+.btn-listDropdown {
+  background-color: transparent;
+  font-size: 23px;
+  font-weight: bold;
+  border: none;
+  padding: 0;
+}
+
+.btn-listDropdown:hover {
+  color: deeppink;
+}
+
+.list-dropdown {
+  position: relative;
+  display: inline-block;
+  position: static;
+}
+
+.dropdown-content {
+  text-align: center;
+  padding: 1vh 2vw 1vh 2vw;
+  display: none;
+  position: absolute;
+  background-color: white;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  border: 1px solid grey;
+  z-index: 1;
+  
+  margin-left: -5vw;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  text-align: center;
+  display: block;
+}
+
+.list-dropdown:hover .dropdown-content {
+  display: block;
+}
+
 .section-about {
   height: 100vh;
   text-align: center;
@@ -181,69 +249,4 @@ a {
 .service-title {
   font-weight: bold;
   font-size: 25px;
-}
-
-.bottom-bar {
-  display: flex;
-  width: 100vw;
-  background-color: black;
-  color: white;
-  text-align: center;
-  padding-top: 1vh;
-  padding-bottom: 1vh;
-}
-
-.bottom-bar > p {
-  flex: 95vw;
-  transform: translate(2vw);
-}
-
-.bottom-bar > i {
-  transform: translate(0vw, 2vh);
-  flex: 5vw;
-  color: rgba(165, 42, 42, 0.788);
-}
-
-
-.btn-listDropdown {
-  background-color: transparent;
-  font-size: 23px;
-  font-weight: bold;
-  border: none;
-  padding: 0;
-}
-
-.btn-listDropdown:hover {
-  color: deeppink;
-}
-
-.list-dropdown {
-  position: relative;
-  display: inline-block;
-  position: static;
-}
-
-.dropdown-content {
-  text-align: center;
-  padding: 1vh 2vw 1vh 2vw;
-  display: none;
-  position: absolute;
-  background-color: white;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  border: 1px solid grey;
-  z-index: 1;
-  
-  margin-left: -5vw;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  text-align: center;
-  display: block;
-}
-
-.list-dropdown:hover .dropdown-content {
-  display: block;
 }
