--- a/index.css
+++ b/index.css
@@ -8,25 +8,29 @@ html,
 body {
   height: 100vh;
   width: 100vw;
-  margin: 0px;
-}
-
-.flex-container {
-  display: flex;
-  flex-wrap: wrap;
-  font-size: 25px;
+  max-width: 100%;
+  margin: 0;
 }
 
 .container-img {
   height: 100vh;
+  max-width: 100%;
   width: 100vw;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   position: relative;
 }
 
+.container-img > img {
+  max-width: 100%;
+  width: 100vw;
+  height: 100%;
+}
+
 .center-aligned {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
@@ -38,10 +42,6 @@ body {
   top: 65%;
   transform: translate(-50%, -50%);
   color: white;
-}
-.container-img > img {
-  width: 100vw;
-  height: 100vh;
 }
 
 .title-home {
@@ -65,6 +65,8 @@ body {
 .horizontal-bar-home {
   background-color: rgba(255, 255, 255, 0.7);
   color: black;
+  max-height: 7vh;
+  max-width: 100%;
 }
 
 .horizontal-bar-home-title {
@@ -72,17 +74,33 @@ body {
   color: white;
   padding-left: 3%;
   font-size: 20px;
+  max-width: 100%;
 }
 
 .horizontal-bar {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   position: absolute;
   left: 0%;
   top: 0%;
   width: 100%;
+  max-width: 100%;
 }
 
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 25px;
+}
+
+.fa-phone-volume {
+  color: deeppink;
+}
+
+.fa-envelope {
+  color: deeppink;
+}
 .contact {
   padding-left: 2%;
   font-size: 20px;
@@ -96,11 +114,13 @@ body {
 }
 nav {
   width: 100vw;
+  max-width: 100%;
 }
 
 nav ul {
   justify-content: center;
   width: 100vw;
+  max-width: 100%;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -113,6 +133,7 @@ ul {
 nav li {
   color: #fff;
   display: flex;
+  flex-wrap: wrap;
   padding-left: 2%;
   padding-right: 2%;
 }
@@ -133,12 +154,63 @@ nav li:hover {
   color: deeppink;
 }
 
-.fa-phone-volume {
+a {
+  text-decoration: none;
+}
+
+
+.bottom-bar {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  background-color: black;
+  color: white;
+  justify-content: center;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+}
+
+.btn-listDropdown {
+  background-color: transparent;
+  font-size: 23px;
+  font-weight: bold;
+  border: none;
+  padding: 0;
+}
+
+.btn-listDropdown:hover {
   color: deeppink;
 }
 
-.fa-envelope {
-  color: deeppink;
+.list-dropdown {
+  position: relative;
+  display: inline-block;
+  position: static;
+}
+
+.dropdown-content {
+  text-align: center;
+  padding: 1vh 2vw 1vh 2vw;
+  display: none;
+  position: absolute;
+  background-color: white;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  border: 1px solid grey;
+  z-index: 1;
+
+  margin-left: -5vw;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  text-align: center;
+  display: block;
+}
+
+.list-dropdown:hover .dropdown-content {
+  display: block;
 }
 
 .section-home {
@@ -168,7 +240,6 @@ nav li:hover {
   width: 30%;
 }
 .flex-row-item > p {
-  font-size: 1vw;
   padding: 1vh;
   margin: 0%;
 }
@@ -242,77 +313,8 @@ nav li:hover {
 .section-home3 > p {
   margin-left: 10vw;
   margin-right: 10vw;
-  font-size: 1.2vw;
 }
 
 .section-home3 > p > span {
   font-weight: bold;
-}
-
-.bottom-bar {
-  display: flex;
-  width: 100vw;
-  background-color: black;
-  color: white;
-  text-align: center;
-  padding-top: 1vh;
-  padding-bottom: 1vh;
-}
-
-.bottom-bar > p {
-  flex: 95vw;
-  transform: translate(2vw);
-}
-
-.bottom-bar > i {
-  transform: translate(0vw, 2vh);
-  flex: 5vw;
-  color: rgba(165, 42, 42, 0.788);
-}
-
-a {
-  text-decoration: none;
-}
-
-.btn-listDropdown {
-  background-color: transparent;
-  font-size: 23px;
-  font-weight: bold;
-  border: none;
-  padding: 0;
-}
-
-.btn-listDropdown:hover {
-  color: deeppink;
-}
-
-.list-dropdown {
-  position: relative;
-  display: inline-block;
-  position: static;
-}
-
-.dropdown-content {
-  text-align: center;
-  padding: 1vh 2vw 1vh 2vw;
-  display: none;
-  position: absolute;
-  background-color: white;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  border: 1px solid grey;
-  z-index: 1;
-  
-  margin-left: -5vw;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  text-align: center;
-  display: block;
-}
-
-.list-dropdown:hover .dropdown-content {
-  display: block;
 }
